# webserve-demo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  serve.cpp  serve.hpp  tools.h
buffer/: buffer.cpp  buffer.hpp
code/: Taskpool.cpp  buffer.cpp  clock.cpp  epoll.cpp  http.cpp  httpparse.cpp  httpresponse.cpp  main.cpp  serve.cpp
code/include/: Taskpool.hpp  ThreadPool.hpp  buffer.hpp  clock.hpp  config.hpp  epoll.hpp  http.hpp  httpdef.hpp  httpparse.hpp  httpresponse.hpp  serve.hpp
code/include/base/: String.hpp  Taskpool.hpp  ThreadPool.hpp  buffer.hpp  epoll.hpp  loger.hpp
code/src/: clock.cpp  http.cpp  httpparse.cpp  httpresponse.cpp  main.cpp  serve.cpp
code/src/base/: Taskpool.cpp  buffer.cpp  epoll.cpp  loger.cpp
epoll/: clock.cpp  clock.hpp  epoll.cpp  epoll.hpp  listener.hpp
f/: 204.html  404.html  502.html  505.html  index.html
f/page2/: gettest.html  index.1  index.html
f/script/: test.js
front/: index.html
http/: HttpParser.h  clock.hpp  http.cpp  http.h  http.hpp  httpdef.hpp  httpparse.cpp  httpparse.h  httpparse.hpp  httpresponse.cpp  httpresponse.hpp  response.txt
log/: loger.cpp  loger.hpp  logtest.txt
pool/: Taskpool.cpp  Taskpool.hpp  ThreadPool.hpp
test/: 0  a.cpp  b.cpp  e.cpp  f.cpp  p.cpp  regex.cpp  request.txt  sql.cpp
